Update UrlUtils.java